# vice-squad

./: .gitignore  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree  math.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  math.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  math.md.txt
src/vice_squad/: __init__.py
tests/: test_api.py
