[project]
name = "vice-squad"
version = "0.1.0"
description = "No plea bargains, just clean numbers."
readme = "README.md"
authors = [
    { name = "xywei", email = "xywei@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "poethepoet>=0.34.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.poe.tasks]
test = "pytest --cov=vice_squad --cov-report=term-missing"
format = "ruff format"
check = "ruff check"
