[project]
name = "vice-squad"
version = "0.1.0"
description = "No plea bargains, just clean numbers."
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "Jacob Xiaoyu Wei", email = "xywei@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "scipy>=1.15.3",
    "sympy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "myst-parser>=4.0.1",
    "poethepoet>=0.34.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.9",
    "sphinx>=8.2.3",
    "sphinx-copybutton>=0.5.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.poe.tasks]
test = "pytest --cov=vice_squad --cov-report=term-missing"
format = "ruff format"
check = "ruff check"
